Closed Bug 39763 Opened 25 years ago Closed 25 years ago

when populating the subscribe dialog from the hostinfo.dat file, subscribe groups are not marked as subscribe

Categories

(SeaMonkey :: MailNews: Message Display, defect, P3)

x86
All
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: sspitzer, Assigned: sspitzer)

Details

2 line fix, in hand.
marking m17, nsbeta2
Status: NEW → ASSIGNED
Keywords: nsbeta2
Target Milestone: --- → M16
fixed.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
QA Contact: lchiang → huang
Seth, should I verify any info from the hostinfo.dat file? Would you please provide more info to me for verify this bug? Thanks.
to verify this bug, do this: use 4.x to read netscape.test on news.mozilla.org use the subscribe dialog, and subscribe to a few other groups exit 4.x make sure the hostinfo.dat file got created. migrate to 6.0 start up mailnews, see that you are subscribed to all the right groups you were in 4.x launch the subscribe dialog. see that the groups you are subscribe to in 6.0 are marked as checked in the subscribe dialog.
> make sure the hostinfo.dat file got created. Can you tell me where is Communicator 4.7 "hostinfo.dat" file reside for Linux & Mac platforms? I only find the file for Windows platform.....
Oh! I found from Mac now. But where is the Communicator 4.7 hostinfo.dat file reside for Linux platform?
~/.netscape/xover-cache/host-news.mozilla.org/hostinfo.dat
Verified on all the platforms: WinNT 06-21-09-M17 commercial build Linux 06-21-08-M17 commercial build Mac 06-21-08-M17 commercial build After subscribe some newsgroups on 4.7 and hostinfo.dat file for 4.7 created on all the platforms. Migrated to 6.0 and all the subscribe newsgroup checked on the subscribe dialog. Thanks Seth for providing info for verifying this bug. Marking as verified.
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
Component: MailNews: Subscribe → MailNews: Message Display
QA Contact: huang → search
You need to log in before you can comment on or make changes to this bug.