fix bug #39763, not marking subscribed groups as subscribed, when we get the list from hostinfo.dat, which is most of the time. fix bug #39760, make subscribe population faster for large numbers of groups. still more to do.  r=mscott.